OpenCassava/OpenCassavaTauri/src-tauri/err.txt
cargo :     Checking app v0.1.0 (C
:\Users\ejrom\exa-tec\OpenOats\Ope
nOats\OpenOatsTauri\src-tauri)
At line:1 char:1
+ cargo check 2>&1 | Out-File 
-Encoding UTF8 "err.txt"
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : Not 
   Specified: (    Checking ap..  
  .auri\src-tauri):String) [],    
 RemoteException
    + FullyQualifiedErrorId : Nat 
   iveCommandError
 
error[E0432]: unresolved imports 
`rubato::InterpolationType`, 
`rubato::InterpolationParameters`
 --> src\audio.rs:3:38
  |
3 | use rubato::{Resampler, 
SincFixedIn, InterpolationType, 
InterpolationParameters, 
WindowFunction};
  |                               
       ^^^^^^^^^^^^^^^^^  
^^^^^^^^^^^^^^^^^^^^^^^ no 
`InterpolationParameters` in the 
root
  |                               
       |
  |                               
       no `InterpolationType` in 
the root
  |
help: a similar name exists in 
the module
  |
3 | use rubato::{Resampler, 
SincFixedIn, 
SincInterpolationType, 
InterpolationParameters, 
WindowFunction};
  |                               
       ++++
help: a similar name exists in 
the module
  |
3 | use rubato::{Resampler, 
SincFixedIn, InterpolationType, 
SincInterpolationParameters, 
WindowFunction};
  |                               
                          ++++

error[E0425]: cannot find type 
`Mutex` in this scope
  --> src\engine.rs:13:12
   |
13 |     audio: Mutex<Option<crate
::audio::AudioEngine>>,
   |            ^^^^^ not found 
in this scope
   |
help: consider importing one of 
these structs
   |
 1 + use std::sync::Mutex;
   |
 1 + use 
std::sync::nonpoison::Mutex;
   |
 1 + use 
tauri::async_runtime::Mutex;
   |

error[E0433]: failed to resolve: 
use of undeclared type `Mutex`
  --> src\engine.rs:29:24
   |
29 |                 audio: 
Mutex::new(None)
   |                        ^^^^^ 
use of undeclared type `Mutex`
   |
help: consider importing one of 
these structs
   |
 1 + use std::sync::Mutex;
   |
 1 + use 
std::sync::nonpoison::Mutex;
   |
 1 + use 
tauri::async_runtime::Mutex;
   |

warning: unused import: 
`tauri::State`
 --> src\engine.rs:3:5
  |
3 | use tauri::State;
  |     ^^^^^^^^^^^^
  |
  = note: 
`#[warn(unused_imports)]` (part 
of `#[warn(unused)]`) on by 
default

warning: unused import: 
`Resampler`
 --> src\audio.rs:3:14
  |
3 | use rubato::{Resampler, 
SincFixedIn, InterpolationType, 
InterpolationParameters, 
WindowFunction};
  |              ^^^^^^^^^

Some errors have detailed 
explanations: E0425, E0432, E0433.
For more information about an 
error, try `rustc --explain 
E0425`.
warning: `app` (lib) generated 2 
warnings
error: could not compile `app` 
(lib) due to 3 previous errors; 2 
warnings emitted
